clang/test/BSC/Negative/OwnedStruct/memoryleak/Access/owned-struct-instance-field-as-param.cbs
// RUN: %clang_cc1 -verify %s

 owned struct A {
  public:
   int a;
};

int foo(int x) {
    return x;
}
int main() {
   A a ={.a=1};
   a.a+=2;
   a.a = 3;
   foo(a.a);
   return foo(a.a);     // expected-error {{memory leak because temporary variable 'a' is owned or indirect owned type, please fix it}}
}
